Dim the fixable holds when a blocking hold is visible

--- a/client/blocks/eligibility-warnings/style.scss
+++ b/client/blocks/eligibility-warnings/style.scss
@@ -124,3 +124,8 @@
 		margin-left: 16px;
 	}
 }
+
+.eligibility-warnings__hold-list-dim .eligibility-warnings__hold-heading,
+.eligibility-warnings__hold-list-dim .eligibility-warnings__hold {
+	opacity: 0.2;
+}
